<resources>
    <string name="app_name">LiveScoringUI</string>

    <string name="hockey_sticks_icon">Hockey Sticks Icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="username">Username</string>
</resources>